# wallet-alert

./: .gitignore  CMakeLists.txt  CS.sh  LICENSE  README.md  builder.sh  runer.sh
docs/: UML.md  functionality.md  requirements.md
resource/: BTC  ETH  LTC  addresses
src/: Analyzer.cpp  BigInt.cpp  FileService.cpp  Mailer.cpp  Process.cpp  Wallet.cpp  Worker.cpp  analyzer.cpp  mailer.cpp  main.cc  main.cpp  process.cpp  timer.cc  timer.cpp  timer.hpp  wallet.cpp  worker.cpp
src/headers/: BcType.h  BigInt.h  FileService.h  Mailer.h  Timer.h  WalletData.h  bc_type.h  constants.h  mailer.h  timer.h
src/structs/: wallet_data.cpp
